[package]
name = "fathers-day-2020"
version = "0.1.0"
authors = ["ComprosoftCEO"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.70"
strum = "0.18.0"
strum_macros = "0.18.0"
rustyline = "9.1.2"
clearscreen = "1.0.10"
